--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		  type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet" type="text/css">
 	<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"/>
+	<link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2/dist/sweetalert2.css"/>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/3.13.1/js-yaml.min.js" type="text/javascript"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
@@ -15,6 +16,9 @@
 			type="text/javascript"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/mode/yaml/yaml.min.js"
 			type="text/javascript"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2/dist/sweetalert2.min.js" type="text/javascript"></script>
+	<!-- Optional: include a polyfill for ES6 Promises for IE11 and Android browser -->
+	<script src="https://cdn.jsdelivr.net/npm/promise-polyfill/dist/polyfill.min.js" type="text/javascript"></script>
 	<!-- update the version number as needed -->
 	<script defer src="/__/firebase/6.2.4/firebase-app.js"></script>
 	<!-- include only the Firebase features as you need -->
@@ -33,6 +37,10 @@
 	</h1>
 	<div class="top-bar" style="display: none;">
 		<div id="welcome-title">Alessandro Contenti's YACL cookbook</div>
+		<button id="new-button">new recipe</button>
+		<button id="save-button" disabled>save recipe</button>
+		<button id="close-button" disabled>close recipe</button>
+		<button id="delete-button" disabled>delete recipe</button>
 		<button id="logout-button">logout</button>
 	</div>
 	<div id="login-container">
