make it more mobile-friendly

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
 	<div id="book">
 
 	</div>
+	<div class="flex-divider"></div>
 	<div id="editor">
 		<div class="editor-container">
 			<div class="editor-toolbar">
