--- a/public/index.html
+++ b/public/index.html
@@ -1,76 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>YACL Cookbook</title>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/codemirror.min.css" rel="stylesheet"
-		  type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet" type="text/css">
-	<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css"/>
-	<link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2/dist/sweetalert2.css"/>
-	<link href="css/style.css" rel="stylesheet" type="text/css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/3.13.1/js-yaml.min.js" type="text/javascript"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/codemirror.min.js"
-			type="text/javascript"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.47.0/mode/yaml/yaml.min.js"
-			type="text/javascript"></script>
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2/dist/sweetalert2.min.js" type="text/javascript"></script>
-	<!-- Optional: include a polyfill for ES6 Promises for IE11 and Android browser -->
-	<script src="https://cdn.jsdelivr.net/npm/promise-polyfill/dist/polyfill.min.js" type="text/javascript"></script>
-	<!-- update the version number as needed -->
-	<script defer src="/__/firebase/6.2.4/firebase-app.js"></script>
-	<!-- include only the Firebase features as you need -->
-	<script defer src="/__/firebase/6.2.4/firebase-auth.js"></script>
-	<script defer src="/__/firebase/6.2.4/firebase-firestore.js"></script>
-
-	<script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
-	<!-- initialize the SDK after all desired features are loaded -->
-	<script defer src="/__/firebase/init.js"></script>
-	<script src="js/yamldoc.js" type="text/javascript"></script>
-	<script src="js/index.js" type="text/javascript"></script>
-</head>
-<body>
-<header class="open">
-	<h1 id="title">YACL COOKBOOK</h1>
-	<div class="top-bar" style="display: none;">
-		<div id="welcome-title">Alessandro Contenti's YACL cookbook</div>
-		<button id="new-button">new recipe</button>
-		<button id="logout-button">logout</button>
-	</div>
-	<div id="login-container">
-		<div id="firebaseui-auth-container"></div>
-	</div>
-</header>
-<main>
-	<div id="book">
-
-	</div>
-	<div class="flex-divider"></div>
-	<div id="editor">
-		<div class="editor-container">
-			<div class="editor-toolbar">
-				<button id="save-button" disabled>save recipe</button>
-				<button id="close-button" disabled>close recipe</button>
-				<button id="delete-button" disabled>delete recipe</button>
-			</div>
-			<textarea id="yaml-textarea"></textarea>
-		</div>
-	</div>
-</main>
-<footer>
-	&copy; 2019 Alessandro Contenti
-</footer>
-<a href="https://github.com/acontenti/yacl-web" class="github-corner" aria-label="View source on GitHub">
-	<svg width="80" height="80" viewBox="0 0 250 250"
-		 style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
-		<path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-		<path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
-			  fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-		<path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
-			  fill="currentColor" class="octo-body"></path>
-	</svg>
-</a>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
