--- a/src/index.template.html
+++ b/src/index.template.html
@@ -15,6 +15,46 @@
 	<link href="icons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
 	<link href="icons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
 	<link href="favicon.ico" rel="icon" type="image/ico">
+	<!-- iPhone XR -->
+	<link href="icons/apple-launch-828x1792.png"
+		  media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)"
+		  rel="apple-touch-startup-image">
+	<!-- iPhone X, XS -->
+	<link href="icons/apple-launch-1125x2436.png"
+		  media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
+		  rel="apple-touch-startup-image">
+	<!-- iPhone XS Max -->
+	<link href="icons/apple-launch-1242x2688.png"
+		  media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)"
+		  rel="apple-touch-startup-image">
+	<!-- iPhone 8, 7, 6s, 6 -->
+	<link href="icons/apple-launch-750x1334.png"
+		  media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)"
+		  rel="apple-touch-startup-image">
+	<!-- iPhone 8 Plus, 7 Plus, 6s Plus, 6 Plus -->
+	<link href="icons/apple-launch-1242x2208.png"
+		  media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)"
+		  rel="apple-touch-startup-image">
+	<!-- iPhone 5 -->
+	<link href="icons/apple-launch-640x1136.png"
+		  media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
+		  rel="apple-touch-startup-image">
+	<!-- iPad Mini, Air, 9.7" -->
+	<link href="icons/apple-launch-1536x2048.png"
+		  media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)"
+		  rel="apple-touch-startup-image">
+	<!-- iPad Pro 10.5" -->
+	<link href="icons/apple-launch-1668x2224.png"
+		  media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)"
+		  rel="apple-touch-startup-image">
+	<!-- iPad Pro 11" -->
+	<link href="icons/apple-launch-1668x2388.png"
+		  media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)"
+		  rel="apple-touch-startup-image">
+	<!-- iPad Pro 12.9" -->
+	<link href="icons/apple-launch-2048x2732.png"
+		  media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
+		  rel="apple-touch-startup-image">
 </head>
 <body>
 <!-- DO NOT touch the following DIV -->
